<resources>


    <string name="app_name">CopenhagenBuzz</string>
    <string name="event_name">Event name</string>
    <string name="event_location">Event location</string>
    <string name="event_type">Event type</string>
    <string name="event_date">Event date</string>


    <string name="event_date_range_format">%1$s to %2$s</string>
    <string name="event_description">Event description</string>
    <string name="button_description">button which adds events</string>


    <string name="guest">Guest</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>


    <string name="fragment_timeline">Timeline</string>
    <string name="fragment_favorites">Favorites</string>
    <string name="fragment_maps">Maps</string>
    <string name="fragment_calendar">Calendar</string>
    <string name="fragment_add_event">Add Event</string>


    <string name="select_image">Select Image</string>
    <string name="selected_image">Selected image</string>
    <string name="info">Info</string>
    <string name="edit">Edit</string>
    <string name="e">E</string>
    <string name="notifications">Notifications</string>
    <string name="support">Support</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="account">Account</string>
    <string name="new_event">New Event</string>
    <string name="event_history">Event History</string>
    <string name="drawer">Drawer</string>
    <string name="user_settings">User Settings</string>
    <string name="general_settings">General Settings</string>
    <string name="guest_account">Guest Account</string>
    <string name="guest_email_com">guest@email.com</string>
    <string name="logs_in_or_out">Logs in or out</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="open_navigation_drawer">Open navigation drawer</string>
    <string name="delete">Delete</string>
    <string name="delete_event_prompt">Are you sure you want to delete this event permanently?</string>
    <string name="cancel">Cancel</string>
    <string name="edit_event">Edit Event</string>
    <string name="save">Save</string>
    <string name="invite">Invite</string>
    <string name="username">Username</string>
    <string name="x_invited">x invited</string>
    <string name="invite_status">invite status</string>
    <string name="invited_users">Invited Users</string>
    <string name="close">Close</string>
    <string name="attending">Attending</string>
    <string name="inbox">Inbox</string>
    <string name="todo">TODO</string>
    <string name="decline">Decline</string>
    <string name="maybe">Maybe</string>
    <string name="attend">Attend</string>
    <string name="open_inbox">Open Inbox</string>
    <string name="x_invited_you_to_an_event">X Invited you to an event!</string>
    <string name="save_changes">Save Changes</string>
    <string name="capture_image">Capture Image</string>


    <string name="previous_month">Previous Month</string>
    <string name="next_month">Next Month</string>
    <string name="sunday_short">Sun</string>
    <string name="monday_short">Mon</string>
    <string name="tuesday_short">Tue</string>
    <string name="wednesday_short">Wed</string>
    <string name="thursday_short">Thu</string>
    <string name="friday_short">Fri</string>
    <string name="saturday_short">Sat</string>
    <string name="no_events">No events on this day</string>
    <string name="events_for_day">Events for %1$s</string>
    <string name="calendar">Calendar</string>
    <string name="event_image">description for image</string>

    <string-array name="event_types">
        <item>Music</item>
        <item>Sport</item>
        <item>Party</item>
        <item>Art</item>
        <item>School</item>
        <item>Dinner</item>
        <item>Lunch</item>
    </string-array>

</resources>