<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Section for Logged-in Users -->
    <group android:id="@+id/user_settings">
        <!-- Header for User Settings -->
        <item
            android:id="@+id/user_settings_header"
            android:title="@string/user_settings"
            android:enabled="false"
            android:icon="@null"
            />

        <item
            android:id="@+id/account"
            android:icon="@drawable/guest_24"
            android:title="@string/account" />
        <item
            android:id="@+id/new_event"
            android:icon="@drawable/baseline_add_circle_24"
            android:title="@string/new_event" />
        <item
            android:id="@+id/event_history"
            android:icon="@drawable/baseline_history_24"
            android:title="@string/event_history" />
    </group>


    <!-- Always Visible Items -->
    <group android:id="@+id/general_settings">
        <!-- Header for General Settings -->
        <item
            android:id="@+id/general_settings_header"
            android:title="@string/general_settings"
            android:enabled="false"
            android:icon="@null" />

        <item
            android:id="@+id/notifications"
            android:icon="@drawable/baseline_circle_notifications_24"
            android:title="@string/notifications" />
        <item
            android:id="@+id/support"
            android:icon="@drawable/baseline_support_24"
            android:title="@string/support" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/settings" />
        <item
            android:id="@+id/help"
            android:icon="@drawable/baseline_help_24"
            android:title="@string/help" />
        <item
            android:id="@+id/terms_and_conditions"
            android:icon="@drawable/baseline_gavel_24"
            android:title="@string/terms_amp_conditions" />
    </group>

</menu>
