<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/fragment_timeline"
        android:enabled="true"
        android:visible="true"
        android:icon="@drawable/timeline_24"
        android:title="@string/fragment_timeline"
        />

    <item
        android:id="@+id/fragment_favorites"
        android:enabled="true"
        android:visible="true"
        android:icon="@drawable/baseline_favorite_24"
        android:title="@string/fragment_favorites"/>

    <item
        android:id="@+id/fragment_maps"
        android:enabled="true"
        android:visible="true"
        android:icon="@drawable/baseline_map_24"
        android:title="@string/fragment_maps"/>

    <item
        android:id="@+id/fragment_calendar"
        android:enabled="true"
        android:visible="true"
        android:icon="@drawable/baseline_calendar_empty_24"
        android:title="@string/fragment_calendar"/>

    <item
        android:id="@+id/action_login"
        android:title="@string/login"
        android:icon="@drawable/guest_24"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        android:icon="@drawable/login_24"
        android:visible="false"
        app:showAsAction="ifRoom" />
</menu>