<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8dp"
        app:cardCornerRadius="@dimen/_16dp"
        app:cardElevation="@dimen/_4dp"
        app:strokeColor="?attr/colorOnBackground"
        app:strokeWidth="@dimen/_1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="@dimen/_10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/event_invitation_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/x_invited_you_to_an_event"
                    android:textSize="@dimen/_14sp"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/_4dp"
                    android:layout_marginBottom="@dimen/_4dp"/>

                <TextView
                    android:id="@+id/event_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_name"
                    android:textSize="@dimen/_18sp"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/_4dp" />

                <TextView
                    android:id="@+id/event_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_type"
                    android:textSize="@dimen/_14sp"
                    android:layout_marginTop="@dimen/_4dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/_20dp"
                    >

                    <!-- Attend TextView -->
                    <TextView
                        android:id="@+id/attend"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/attend"
                        android:textSize="@dimen/_12sp"
                        android:textColor="?attr/colorPrimary"
                        android:paddingHorizontal="@dimen/_12dp"
                        android:paddingVertical="@dimen/_8dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:background="?attr/selectableItemBackground"
                        android:layout_marginEnd="@dimen/_16dp"/>

                    <!-- Maybe TextView -->
                    <TextView
                        android:id="@+id/maybe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/maybe"
                        android:textSize="@dimen/_12sp"
                        android:textColor="?attr/colorPrimary"
                        android:paddingHorizontal="@dimen/_12dp"
                        android:paddingVertical="@dimen/_8dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:background="?attr/selectableItemBackground"
                        android:layout_marginEnd="@dimen/_16dp"/>

                    <!-- Decline TextView -->
                    <TextView
                        android:id="@+id/decline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/decline"
                        android:textSize="@dimen/_12sp"
                        android:textColor="?attr/colorPrimary"
                        android:paddingHorizontal="@dimen/_12dp"
                        android:paddingVertical="@dimen/_8dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:background="?attr/selectableItemBackground"/>

                </LinearLayout>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>