<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    >

    <LinearLayout
        android:id="@+id/center_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/text_view_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_32dp"
            android:text="@string/app_name"
            android:textSize="@dimen/_40sp"
            android:textStyle="bold"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="@dimen/_12sp"
            android:autoSizeMaxTextSize="@dimen/_40sp"
            android:autoSizeStepGranularity="@dimen/_2sp"
            android:textAppearance="@style/CustomToolbarTitleTextAppearance"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_marginEnd="@dimen/_16dp"
                app:icon="@drawable/login_24"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/_8dp"
                android:backgroundTint="?attr/colorAccent"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/guest_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guest"
                app:icon="@drawable/guest_24"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/_8dp"
                android:backgroundTint="?attr/colorAccent"/>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
